update dicts before open beta

--- a/MultiLanguage/languages/RU/dictionaries/Events.json
+++ b/MultiLanguage/languages/RU/dictionaries/Events.json
@@ -158,7 +158,7 @@
   "Hello @player. Nice day, isn't it?": "Привет @player. Хороший день, правда?",
   "I'm just keeping an eye on my little brother. It's good for him to get some fresh air on a day like this.": "Я присматриваю за младшим братом. Полезно подышать свежим воздухом в такой хороший день.",
   "Our Dad used to take us to the beach on sunny days like this.": "Наш папа водил нас на пляж в солнечные дни как этот.",
-  "Sam...?": "Сэм...?",
+  "Sam...?": "Сэм?..",
   "Is Dad ever going to come home?": "Папа когда-нибудь вернется домой?",
   "Of course, Vince. Dad's going to come back as soon as he possibly can.": "Конечно, Винс. Папа вернется так быстро, как только сможет.",
   "But I heard some grown-ups saying that... that all of our troops are getting shot to pieces.": "Но я слышал как взрослые говорят что... что все наши войска были расстреляны в клочья.",
@@ -848,8 +848,8 @@
   "If you ever see ore glistening in the water, use that pan and see what you find.": "Когда увидишь блеск в воде, используй сито и надейся на лучшее.",
   "__comment": "Railroad",
   "__comment": "Harvey",
-  "There you are... just in time!": "Вот и ты... как раз во время!",
-  "Look, here it comes!": "Смотри, вот он идет!",
+  "There you are... just in time!": "Вот и ты... как раз вовремя!",
+  "Look, here it comes!": "Аккуратно, он спускается!",
   "Marcello's Balloon Rentals at your service!": "Аренда воздушных шаров Марчелло к вашим услугам!",
   "Marcello: It's all yours for two hours.": "Марчелло: Он весь ваш на следующие два часа.",
   "Marcello: Now... I was told there's a saloon somewhere around here?": "Марчелло: Ну а теперь... Мне тут рассказали, что где-то в округе есть салун.",
@@ -857,30 +857,30 @@
   "This looks fun! Let's ride!": "Выглядит весело! Поехали",
   "...But aren't you afraid of heights?": "...Но разве ты не боишься высоты?",
   "Okay... you first.": "Хорошо... сначала ты.",
-  "We... We're up so high... *gulp*": "Мы...Мы поднялись так высоко... *сглатывает*",
+  "We... We're up so high... *gulp*": "Мы... Мы поднялись так высоко... *сглатывает*",
   "I wanted to impress you with this... but look at me. I'm a trembling coward.": "Я хотел тебя впечатлить...но посмотри на меня. Я весь дрожу от страха.",
-  "Well, you've got more than enough courage to make up for me, @player... that's... that's part of why I like you.1": "Похоже, у тебя столько смелости, что хватит на нас обоих, @player... это... это именно то, что мне нравится в тебе.1",
+  "Well, you've got more than enough courage to make up for me, @player... that's... that's part of why I like you.1": "Похоже, у тебя столько мужества, что хватит на нас обоих, @player... это... это именно то, что мне нравится в тебе.1",
   "Okay, I'm going to open my eyes and look down... don't let go of my hand.": "Хорошо, я сейчас открою глаза и посмотрю вниз... не отпускай мою руку.",
-  "I... I think I can do it now.": "Я ... Я думаю, что сделаю это... сейчас.",
-  "Hey, this is incredible! I think I can see Mayor Lewis standing in the town square!": "Эй, это же невероятно! Кажется я вижу мэра Льюиса, стоящего на городской площади!",
+  "I... I think I can do it now.": "Я... Я думаю, что сделаю это... сейчас.",
+  "Hey, this is incredible! I think I can see Mayor Lewis standing in the town square!": "Эй, это же невероятно! Кажется, я вижу мэра Льюиса, стоящего на городской площади!",
   "Oh dear... our time's almost up.": "О боже... наше время почти вышло.",
-  "Um... @player? We've known each other for a while now and... I... er...1": "Эм...@player? Мы знаем другу друга уже довольно давно и... я... эээ...1",
+  "Um... @player? We've known each other for a while now and... I... er...1": "Эм...@player? Мы знаем другу друга уже довольно давно и... я... э...1",
   "...1": "...1",
-  "Whoops... Our time was up half an hour ago. We'd better touch down.": "Ууупс... наше время вышло пол часа назад. Нам лучше приземлится.",
+  "Whoops... Our time was up half an hour ago. We'd better touch down.": "Упс... наше время вышло пол часа назад. Нам лучше приземлиться.",
   "I haven't had such a wonderful day for as long as I can remember.": "Я не могу вспомнить другой такой же чудесный день, за всю свою жизнь.",
-  "I am... yeah.": "Я...да.",
-  "But I'm determined to not let that stop me from doing what I want... and experiencing this with you.": "Но я определённо надеюсь на то, что это не остановит меня от того, что хочу сделать... сделать с тобой.",
-  "I'll try not to get scared.": "Я постараюсь остаться храбрым.",
+  "I am... yeah.": "Я... да.",
+  "But I'm determined to not let that stop me from doing what I want... and experiencing this with you.": "Но я решил не давать этому страху возможности помешать мне осуществить желаемое... и весь этот опыт я хочу разделить с тобой.",
+  "I'll try not to get scared.": "Я постараюсь оставаться храбрым.",
   "We... We're up so high... *gulp*": "Мы...Мы поднялись так высоко... *сглатывает*",
   "I wanted to impress you with this... but look at me. I'm a trembling coward.": "Я хотел тебя впечатлить...но посмотри на меня. Я весь дрожу от страха.",
-  "Well, you've got more than enough courage to make up for me, @player... that's... that's part of why I like you.1": "Похоже, у тебя столько смелости, что хватит на нас обоих, @player... это... это именно то, что мне нравится в тебе.1",
+  "Well, you've got more than enough courage to make up for me, @player... that's... that's part of why I like you.1": "Похоже, у тебя столько мужества, что хватит на нас обоих, @player... это... это именно то, что мне нравится в тебе.1",
   "Okay, I'm going to open my eyes and look down... don't let go of my hand.": "Хорошо, я сейчас открою глаза и посмотрю вниз... не отпускай мою руку.",
-  "I... I think I can do it now.": "Я ... Я думаю, что сделаю это... сейчас.",
-  "Hey, this is incredible! I think I can see Mayor Lewis standing in the town square!": "Эй, это же невероятно! Кажется я вижу мэра Льюиса, стоящего на городской площади!",
+  "I... I think I can do it now.": "Я... Я думаю, что сделаю это... сейчас.",
+  "Hey, this is incredible! I think I can see Mayor Lewis standing in the town square!": "Эй, это же невероятно! Кажется, я вижу мэра Льюиса, стоящего на городской площади!",
   "Oh dear... our time's almost up.": "О боже... наше время почти вышло.",
-  "Um... @player? We've known each other for a while now and... I... er...1": "Эм...@player? Мы знаем другу друга уже довольно давно и... я... эээ...1",
+  "Um... @player? We've known each other for a while now and... I... er...1": "Эм...@player? Мы знаем другу друга уже довольно давно и... я... э...1",
   "...1": "...1",
-  "Whoops... Our time was up half an hour ago. We'd better touch down.": "Ууупс... наше время вышло пол часа назад. Нам лучше приземлится.",
+  "Whoops... Our time was up half an hour ago. We'd better touch down.": "Упс... наше время вышло пол часа назад. Нам лучше приземлится.",
   "I haven't had such a wonderful day for as long as I can remember.": "Я не могу вспомнить другой такой же чудесный день, за всю свою жизнь.",
   "__comment": "Saloon",
   "__comment": "Gus",
