--- a/MultiLanguage/languages/RU/dictionaries/NPCGiftTastes.json
+++ b/MultiLanguage/languages/RU/dictionaries/NPCGiftTastes.json
@@ -27,7 +27,7 @@
   "This is wonderful! You've really made my day special.": "Это просто чудесно! Ты действительно сделал мой день особенным.",
   "This is a great gift. Thank you!": "Это просто отличный подарок. Спасибо!",
   "Hmm... This doesn't really do much for me.": "Эмм... Это мне не пригодится.",
-  "Why would you give this to me? Do you think I like junk just because I live in a tent? That's terrible.": "Зачем ты мне это дал? Думаешь мне нравится мусор, из за того что я живу в палатке? Это ужасно.",
+  "Why would you give this to me? Do you think I like junk just because I live in a tent? That's terrible.": "Зачем ты мне это дал? Думаешь мне нравится мусор, из-за того что я живу в палатке? Это ужасно.",
   "A gift? How nice.": "Подарок? Как мило.",
   "__comment": "Pierre",
   "This is my all-time favorite! Thank you!": "Мне всегда это нравилось! Спасибо!",
@@ -141,7 +141,7 @@
   "Oh wow, @player! How'd you know this is my favorite?": "Ух ты, @player! Откуда ты знаешь, что мне это нравится?",
   "This is great! Thanks!": "Это здорово! Спасибо!",
   "I don't really like this.": "Мне не очень нравится.",
-  "Why are you giving me your garbage?": "Почему ты даешь мне свой мусор?",
+  "Why are you giving me your garbage?": "Почему ты даёшь мне свой мусор?",
   "Oh, you got me something? Thanks!": "О, это мне? Спасибо!",
   "__comment": "Marnie",
   "This is an incredible gift! Thanks!!": "Это невероятный подарок! Спасибо!!",
@@ -153,7 +153,7 @@
   "@player, this is a beautiful gift! Thank you!": "@player, это прекрасный подарок! Спасибо!",
   "This is for me? Marvelous!": "Это для меня? Чудесно!",
   "Hmm... I'm not a huge fan of this.": "Хм... я не большой фанат этого.",
-  "This item gives me a terrible feeling. I'll have to dispose of it.": "Эта вещь вызывает у меня ужасное чувство. Мне придется выкинуть ее.",
+  "This item gives me a terrible feeling. I'll have to dispose of it.": "Эта вещь вызывает у меня ужасное чувство. Мне придётся выкинуть её.",
   "Oh, a present! Thank you!": "Ой, подарок! Спасибо!",
   "__comment": "Gus",
   "You're giving this... to me? I'm speechless.": "Ты даришь это... для меня? У меня нет слов.",
@@ -165,16 +165,16 @@
   "Hey, I really love this stuff. You can find great things in the mines.": "Привет, мне очень этот материал. Ты можешь найти отличные вещи в шахтах.",
   "Ah, this reminds me of home.": "Ах, это напоминает мне о доме.",
   "Hmm... Is this what humans like?": "Хм... вот что людям нравится?",
-  "I don't care what species you are. This is worthless garbage.": "Мне плевать, к какому виду ты относишься. Это никчемный мусор.",
+  "I don't care what species you are. This is worthless garbage.": "Мне плевать, к какому виду ты относишься. Это никчёмный мусор.",
   "An offering! Thank you.": "Дар! Спасибо.",
   "__comment": "Wizard",
   "Ahh, this is imbued with potent arcane energies. It's very useful for my studies. Thank you!": "Ах, оно пропитано мощной магической энергией. Очень полезно для моих исследований. Спасибо!",
   "Many thanks. This item has some very interesting properties.": "Большое спасибо. Этот предмет имеет очень интересные свойства.",
-  "This?... I suppose I'll cast it into the flames and see what happens.": "Этот?... Полагаю, я брошу его в огонь и посмотрю, что произойдет.",
+  "This?... I suppose I'll cast it into the flames and see what happens.": "Этот?... Полагаю, я брошу его в огонь и посмотрю, что произойдёт.",
   "Ughh... These are utterly mundane. Please refrain from bothering me with this in the future.": "Ох... это совершенно обычная вещь. Пожалуйста, воздержись и не донимай меня этим в будущем.",
   "Thank you. This will prove useful, I think.": "Спасибо. Я думаю, это очень пригодится.",
   "__comment": "Harvey",
-  "It's for me? This is my favorite stuff! It's like you read my mind.": "Это для меня? Это мое любимое! Ты будто читаешь мои мысли.",
+  "It's for me? This is my favorite stuff! It's like you read my mind.": "Это для меня? Это моё любимое! Ты будто читаешь мои мысли.",
   "That's such a nice gift. Thank you!": "Это такой приятный подарок. Спасибо!",
   "Hmm... Are you sure this is healthy?": "Хм... ты точно в порядке?",
   "...I think I'm allergic to this.": "Мне кажется, что у меня аллергия на это.",
@@ -183,10 +183,10 @@
   "Ooo! I absolutely love getting flowers from the valley. I'm so happy!~": "Ооо! Я очень люблю цветы из долины. Я так счастлива!~",
   "This looks wonderful. Thanks so much!": "Это очень красиво смотрится. Большое спасибо!",
   "Oh... Um. Thanks.": "Ой... Эм. Спасибо.",
-  "*sniff* ...what is it?": "*шмыг* ...что это?",
+  "*sniff* ...what is it?": "*шмыг*... что это?",
   "This is for me? Thank you!": "Это для меня? Спасибо!",
   "__comment": "Willy",
-  "This is great! If only me ol' Pappy was around. He'd go nuts for this.": "Это здорово! Если бы мой старый папа была здесь. Он бы сошел с ума от этого.",
+  "This is great! If only me ol' Pappy was around. He'd go nuts for this.": "Это здорово! Если бы мой старый папа был здесь. Он бы сошёл с ума от этого.",
   "This looks great. Thank you!": "Это выглядит здорово. Спасибо!",
   "Hmmm... You like stuff like this? Huh.": "Хммм... Тебе нравятся такие вещи? Мда.",
   "... *sniff*... Well I guess I can toss it into the chum bucket.": "*шмыг*... Ну я думаю, что выброшу это в ведро с наживкой.",
