--- a/MultiLanguage/languages/RU/dictionaries/_Game1.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Game1.json
@@ -6,18 +6,18 @@
   "Blue Tower": "Голубая башня",
   "You've learned a new cooking recipe: @key": "Вы научились готовить новое блюдо: @key",
   "You've learned how to craft a new item: @key": "Вы научились делать новый предмет: @key",
-  "You found a =stardrop! Your mind is filled with thoughts of @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Ваш разум забит мыслями о  @keyP. ^^Ваш максимальный уровень энергии увеличился.",
-  "You found a =stardrop! It's strange, but the taste reminds you of @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Странно, но вкус напоминает вам о @keyP. ^^Ваш максимальный уровень энергии увеличился.",
-  "You found a =stardrop! You feel an unwavering connection to the valley itself. @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Вы чувствуете непоколебимую связь с самой долиной. @key. ^^Ваш максимальный уровень энергии увеличился.",
-  "You found a =stardrop! Your mind is filled with thoughts of... ConcernedApe? (Well, thanks!) @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Ваш разум забит мыслями о... ConcernedApe? (Что ж, Спасибо!) @key. ^^Ваш максимальный уровень энергии увеличился.",
+  "You found a =stardrop! Your mind is filled with thoughts of @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Ваш разум забит мыслями о @keyP. ^^Ваш максимальный уровень энергии повысился.",
+  "You found a =stardrop! It's strange, but the taste reminds you of @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Странно, но вкус напоминает вам о @keyP. ^^Ваш максимальный уровень энергии повысился.",
+  "You found a =stardrop! You feel an unwavering connection to the valley itself. @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Вы чувствуете непоколебимую связь с долиной. @key. ^^Ваш максимальный уровень энергии повысился.",
+  "You found a =stardrop! Your mind is filled with thoughts of... ConcernedApe? (Well, thanks!) @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Ваш разум забит мыслями о... ConcernedApe? (Что ж, спасибо!) @key. ^^Ваш максимальный уровень энергии повысился.",
   "Stardew Valley has crashed...": "Игра Stardew Valley сломалась...",
-  "Please send the error report or a screenshot of this message to @ConcernedApe. (http://stardewvalley.net/contact/)": "Пожалуйста, отправьте отчет об ошибке или скриншот этого сообщения на @ConcernedApe. (http://stardewvalley.net/contact/)",
+  "Please send the error report or a screenshot of this message to @ConcernedApe. (http://stardewvalley.net/contact/)": "Пожалуйста, отправьте отчёт об ошибке или скриншот этого сообщения на @ConcernedApe. (http://stardewvalley.net/contact/)",
   "Dwarf King": "Король гномов",
   "Mr. Lewis": "М-р Льюис",
   "How much do you want to bet? (You have @number club coins).": "Сколько хотите поставить? (У вас @number клубных монет).",
   "Semitones above C3:": "Полутона выше C3:",
   "Drum Sound:": "Звук барабана:",
-  "Choose song:": "Выберите песню: ",
+  "Choose song:": "Выберите песню:",
   "How many units of fuel do you want to buy?": "Сколько топлива вы хотите купить?",
   "How many would you like?": "Сколько вы хотите?",
   "How many would you like to buy?": "Сколько вы хотите купить?",
@@ -69,7 +69,7 @@
   "Next stop: Calico Desert.": "Следующая остановка: Пустыня Калико.",
   "...@player?": "...@player?",
   "__comment dont know if it used or not": "__comment dont know if it used or not",
-  "X or Left Click - Advance Dialogue": "X или ЛКМ -  Выбор диалога",
+  "X or Left Click - Advance Dialogue": "X или ЛКМ - Выбор диалога",
   "X or Left Click - Select": "X или ЛКМ - Выбрать",
   "C or Right Click - Cancel": "C или ПКМ - Отмена",
   "X or Left Click - Grab | Use": "X или ЛКМ - Взять | Использовать",
@@ -83,6 +83,6 @@
   "@newline Z or Mouse Wheel - Switch Item": "@newline Z или Колесико мыши - Переключить предмет",
   "Today's festival is being set up. Come back later.": "Сегодняшний праздник ещё готовится. Приходите позже.",
   "__comment key is server name, no need to translate": "__comment key is server name, no need to translate",
-  "Connecting to @key...": "Подключение  к @key..",
+  "Connecting to @key...": "Подключение к @key...",
   "Melting Winter Snow...": "Тает зимний снег..."
 }
