--- a/MultiLanguage/languages/RU/dictionaries/_Menus.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Menus.json
@@ -396,5 +396,5 @@
   "- @key - @key": "- @key - @key",
   "Last Item Shipped": "Последний проданный предмет",
   "New record!": "Новый рекорд!",
-  "v1.07": "v1.07+БЕТА перевода. Shift+Alt+L - отчет. Баги и отчеты высылайте на sdvtr<ya.ru"
+  "v1.07": "v1.07+BETA перевода. Shift+Alt+L - отчёт. Баги и отчёты высылайте на sdvtr<ya.ru"
 }
