--- a/MultiLanguage/languages/RU/dictionaries/schedules.json
+++ b/MultiLanguage/languages/RU/dictionaries/schedules.json
@@ -102,7 +102,7 @@
   "Dad's making good progress on his experiment.": "Папа делает успехи в своем эксперименте.",
   "I hope Penny decides to get married some day.": "Я надеюсь, что Пенни решит выйти замуж когда-нибудь.",
   "I'm at work, honey! Don't let the doctor see.": "Я на работе, любовь моя! Не позволяй доктору видеть нас вместе.",
-  "It's nice for you to visit me.": "Приятно, что ты не забываешь обо мне.",
+  "It's nice for you to visit me.": "Приятно, что ты навещаешь меня.",
   "I'm almost off work...": "Я практически закончила на сегодня...",
   "It's hard to really grasp the scale of the universe.": "Действительно трудно осознать масштаб вселенной.",
   "__comment": "Pam",
@@ -140,7 +140,7 @@
   "My skills haven't declined... Sam's still just as easy to beat.": "Мои навыки не ухудшились... Сэма по прежнему легко победить.",
   "Dammit... I almost forgot. I have to go see Doctor Harvey today.": "Черт... чуть не забыл. Я должен сегодня увидеть доктора Харви.",
   "What are you doing in here? I could've been naked!": "Что ты здесь делаешь? Я мог быть голым!",
-  "Should I let Sam win for once? ...nah.": "Должен ли я позволить Сэму победить хоть раз? ...нее.",
+  "Should I let Sam win for once? ...nah.": "Позволить Сэму победить хоть раз?... Нее.",
   "__comment": "Vincent",
   "*sob*... I have to get my shots today.": "*всхлип*... я должен получить мои снимки сегодня.",
   "*gulp*... Mommy, don't make me do it.": "*делает глоток*... Мама, не заставляй меня делать это.",
